--- a/Gmaster/Gmaster.csproj
+++ b/Gmaster/Gmaster.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IBM.Data.DB2.Core" Version="1.2.2.100" />
+    <PackageReference Include="IBM.EntityFrameworkCore" Version="1.2.2.100" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Webix" Version="5.4.0" />
   </ItemGroup>
