--- a/Gmaster/appsettings.json
+++ b/Gmaster/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MupyContext": "DATABASE=Sample;SERVER=192.168.0.42:50000;UID=db2inst1;PWD=north123;"
+  }
 }
