--- a/Gmaster/Gmaster.csproj
+++ b/Gmaster/Gmaster.csproj
@@ -3,12 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <TypeScriptToolsVersion>2.8</TypeScriptToolsVersion>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="IBM.Data.DB2.Core" Version="1.2.2.100" />
     <PackageReference Include="IBM.EntityFrameworkCore" Version="1.2.2.100" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Webix" Version="5.4.0" />
   </ItemGroup>
 
