Webix テーブル表示確認

--- a/Gmaster/appsettings.json
+++ b/Gmaster/appsettings.json
@@ -7,5 +7,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MupyContext": "DATABASE=Sample;SERVER=192.168.0.42:50000;UID=db2inst1;PWD=north123;"
+  },
+  "DbSettings": {
+    "DefaultSchema": "DB2INST1"
   }
+  
 }
