--- a/Gmaster/Gmaster.csproj
+++ b/Gmaster/Gmaster.csproj
@@ -22,6 +22,9 @@
     <Content Update="Views\Home\UiTrial.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Table\Records.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
