--- a/Gmaster/Gmaster.csproj
+++ b/Gmaster/Gmaster.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper.SqlBuilder" Version="1.50.5" />
     <PackageReference Include="IBM.Data.DB2.Core" Version="1.2.2.100" />
     <PackageReference Include="IBM.EntityFrameworkCore" Version="1.2.2.100" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
